@@ -6,6 +6,7 @@
 	instead of context Name
 	+ Fixing an `img` tag closed now properly and adding alternative
 	text to match W3C validation in head title
+	+ Backup pages now includes the size of the archive
 0.12.99
 	+ Add support for reporting
 	+ Refresh logs automatically
